--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ ol {
 <body>
 
 <address>
-<b>Dr. Eleanor Gaye</b><br> 
+<b>Dr. Moises Gasca</b><br> 
 Awesome Science faculty<br>
 University of Awesome<br>
 Bobtown, CA 99999,<br>
@@ -46,11 +46,11 @@ USA<br>
 </address>
 
 <p>
-<b><i>Miss Eileen Dover</i></b><br>
+<b><i>Miss Samantha Aline</i></b><br>
 <i>4321 Cliff Top Edge</i><br>
 <i>Dover, CT9 XXX</i><br>
 <i>UK</i></p><br>
-<h2>Re: Eileen Dover university application</h2>
+<h2>Re: Pilares Tlalcoligia university application</h2>
 <p>Dear Eileen,</p>
 <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your <ins>PhD</ins> next year. I will answer your questions one by one, in the following sections.</p>
 <h3>Starting dates</h3>
@@ -80,7 +80,7 @@ USA<br>
 <blockquote>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</blockquote>
 <p>For more of my research, see my <a href="https://exoticacademy.com/">exotic dance research page.</a></p>
 <p>Yours sincerely,</p>
-<p>Dr Eleanor Gaye</p>
+<p>Dr Yisus Gasca</p>
 <p>University of Awesome motto: "Be awesome to each other." -- <i>The memoirs of Bill S Preston, Esq</i></p>
 
 </body>
